Mon, 05 Nov 2007 01:12:15 +0100 <thp@perli.net>
Better command detection for the converter library

	* src/gpodder/libconverter.py: Detect existence of commands before
	invoking them for converting files; based on a patch by
	Nick (nikosapi.org); ConverterCollection is now a dict itself :)
	* src/gpodder/util.py: Add new find_command() function that will
	search the system's PATH for a specific executable command

Mon, 05 Nov 2007 00:21:39 +0100 <thp@perli.net>
Remove extracted cover art when deleting episode files

	* src/gpodder/util.py: Apply modified version of a patch from
	Nick (nikosapi.org) that is better suited for deleting cover art that
	has been extracted with the new eyeD3 cover art extraction code

Mon, 05 Nov 2007 00:17:12 +0100 <thp@perli.net>
Patch from Nick (nikosapi) to support eyeD3 cover art extraction

	* src/gpodder/libipodsync.py: Apply modified version of a patch from
	Nick (nikosapi.org) to utilize eyeD3 for cover art extraction in iPod
	sync code; remove dependency on PyID3
	* README: PyID3 is not a dependency anymore, as we can now use eyeD3
	for the same purpose (cover art extraction)

Sat, 03 Nov 2007 14:14:09 +0100 <thp@perli.net>
Fix format_filesize() function to be standards-conformant (unit prefixes)

	* src/gpodder/config.py: Add "use_si_units" configuration option; if
	True, the user will see SI units (MB, kB, ...); if False (the
	default); the user will see binary-prefix units (MiB, KiB, ..)
	* src/gpodder/libgpodder.py: Add pass-through function
	"format_filesize()" to gPodderLib that combines the
	util.format_filesize function with the gPodder-specific config option
	* src/gpodder/util.py: Apply a modified patch from Gerrit Sangel
	<z0idberg@gmx.de> to add support for SI units and binary prefixes to
	format_filesize(); this makes the function standards-compliant
	* src/gpodder/download.py: Updated to use new format_filesize
	* src/gpodder/gui.py: Updated to use new format_filesize